tests/regression/success/test_namespaces.lus
type two = int ;

type one = { blah: two } ;

const two_c: real = 0.0 ;

-- node two: real -> real
node two (i: real) returns (out: real) ;
let
  out = 0.0 -> pre i ;
tel

-- contract one: two -> real
contract one (i: two) returns (out: real) ;
let
  assume i >= 0 ;
  guarantee out >= 0.0 ;
tel

-- contract two: two -> real
contract two (i: two) returns (out: real) ;
let
  import one (i) returns (out) ;
  assume i >= 0 ;
  guarantee out >= 0.0 ;
tel

-- node one: real -> real
node one (i: real) returns (out: real) ;
(*@contract
  import two ((int i)) returns (out) ;
*)
let
  out = two(two_c -> pre i) ;
tel
