tests/regression/error/function_stateful_contract_import.lus
-- Illegal call to a stateful contract in a function.
contract blah_spec (in: int) returns (out: int) ;
let
  guarantee out = (0 -> pre in) ;
tel

function blah ( in: int ) returns ( out: int ) ;
(*@contract
  import blah_spec (in) returns (out) ;
*)
let
  out = in ;
tel
